buildscript {
  dependencies {
    classpath libs.flyway.database.postgresql
  }
}

plugins {
    id 'application'
    id 'checkstyle'
    id 'pmd'
    id 'jacoco'
    id 'idea'
    alias libs.plugins.ben.manes.versions
    alias libs.plugins.flyway
    alias libs.plugins.git.properties
    alias libs.plugins.hmcts.java
    alias libs.plugins.openapi.gradle.plugin
    alias libs.plugins.owasp
    alias libs.plugins.pact
    alias libs.plugins.pitest
    alias libs.plugins.serenity.gradle.plugin
    alias libs.plugins.sonarqube
    alias libs.plugins.spring.boot
    alias libs.plugins.spring.dependency.management
}

group = 'uk.gov.hmcts.reform'
version = '0.0.1'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

tasks.withType(JavaExec).configureEach {
  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
}

gitProperties {
    gitPropertiesDir = new File("${project.rootDir}/src/main/resources/uk/gov/hmcts/reform/laubackend/idam/gitcommit")
    keys = ['git.commit.id', 'git.commit.time']
    dateFormat = "yyyy-MM-dd'T'HH:mmZ"
    dateFormatTimeZone = "GMT"
}

sourceSets {
    test {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/test/java')
        }
        resources.srcDir file('src/test/resources')
    }

    functionalTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/functionalTest/java')
        }
        resources.srcDir file('src/functionalTest/resources')
    }

    integrationTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/integrationTest/java')
        }
        resources.srcDir file('src/integrationTest/resources')
    }

    smokeTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/smokeTest/java')
        }
        resources.srcDir file('src/smokeTest/resources')
    }
    contractTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/contractTest/java')
        }
        resources.srcDir file('src/contractTest/resources')
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-Xlint:unchecked" << "-Werror"
}

idea {
  module {
    testSources.from(project.sourceSets.integrationTest.java.srcDirs)
    testSources.from(project.sourceSets.functionalTest.java.srcDirs)
    testSources.from(project.sourceSets.smokeTest.java.srcDirs)
    testResources.from(project.sourceSets.integrationTest.resources.srcDirs)
    testResources.from(project.sourceSets.functionalTest.resources.srcDirs)
    testResources.from(project.sourceSets.smokeTest.resources.srcDirs)
  }
}

test {
    useJUnitPlatform()
    failFast = true
}

configurations {
    cucumberRuntime {
        extendsFrom testImplementation
    }
    integrationTestCompile.extendsFrom testCompile
    integrationTestRuntime.extendsFrom testRuntime
    functionalTestCompile.extendsFrom testCompile
    functionalTestRuntime.extendsFrom testRuntime
    contractTestImplementation.extendsFrom(testImplementation)
    contractTestRuntimeOnly.extendsFrom(testRuntimeOnly)
}

task unit(type: Test, description: 'Runs the unit tests.', group: 'Verification') {
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform()
}

task functional(type: Test) {

    systemProperty "scenario", System.getProperty('scenario')

    description = "Runs functional tests"
    group = "Verification"
    testClassesDirs = sourceSets.functionalTest.output.classesDirs
    classpath = sourceSets.functionalTest.runtimeClasspath
    useJUnitPlatform()
    finalizedBy aggregate
}

task integration(type: Test) {
    description = "Runs integration tests"
    group = "Verification"
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    mustRunAfter test
}

check.dependsOn integration


task smoke(type: Test) {
    description = "Runs Smoke Tests"
    testClassesDirs = sourceSets.smokeTest.output.classesDirs
    classpath = sourceSets.smokeTest.runtimeClasspath
    useJUnitPlatform()
}

task fortifyScan(type: JavaExec) {
    mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
    classpath += sourceSets.test.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

task contract(type: Test, description: 'Runs the pact contract tests.', group: 'Verification') {
  description = "Runs the consumer Pact tests"
  useJUnitPlatform()
  testClassesDirs = sourceSets.contractTest.output.classesDirs
  classpath = sourceSets.contractTest.runtimeClasspath
}

project.ext.pacticipantVersion = getCheckedOutGitCommitHash()

static def getCheckedOutGitCommitHash() {
  'git rev-parse --verify --short HEAD'.execute().text.trim()
}

pact {
  broker {
    pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
  }
  publish {
    pactDirectory = 'pacts'
    tags = [System.getenv("PACT_BRANCH_NAME") ?: 'Dev']
    version = project.pacticipantVersion
  }
}

task runAndPublishConsumerPactTests(type: Test){
  dependsOn(contract)
  logger.lifecycle("Runs pact Tests")
  testClassesDirs = sourceSets.contractTest.output.classesDirs
  classpath = sourceSets.contractTest.runtimeClasspath
  finalizedBy(pactPublish)
}

checkstyle {
    maxWarnings = 0
    toolVersion = libs.versions.checkstyle.tool.get()
    getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
}

pmd {
    toolVersion = libs.versions.pmd.tool.get()
    sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
    reportsDir = file("$project.buildDir/reports/pmd")
    // https://github.com/pmd/pmd/issues/876
    ruleSets = []
    ruleSetFiles = files("config/pmd/ruleset.xml")
}

runAndPublishConsumerPactTests.dependsOn contract

project.tasks['jacocoTestReport'].dependsOn test, integration

jacocoTestReport {
    executionData(test, integration)
    reports {
        xml.required = true
        csv.required = false
        xml.outputLocation = file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
    }
}

pitest {
    junit5PluginVersion = libs.versions.pitest.junit5.plugin.get()
    targetClasses = ['uk.gov.hmcts.reform.laubackend.*']
    excludedClasses = [
            'uk.gov.hmcts.reform.laubackend.idam.madeup.*'
    ]
    threads = 10
    enableDefaultIncrementalAnalysis = true
    outputFormats = ['XML', 'HTML']
    timestampedReports = false
    mutationThreshold = 50
    timeoutConstInMillis = 30000
    mutators.set([
            'CONDITIONALS_BOUNDARY',
            'INCREMENTS',
            'INVERT_NEGS',
            'MATH',
            'NEGATE_CONDITIONALS',
            'VOID_METHOD_CALLS',
            'EMPTY_RETURNS',
            'FALSE_RETURNS',
            'NULL_RETURNS',
            'PRIMITIVE_RETURNS',
            'TRUE_RETURNS',
            'REMOVE_CONDITIONALS'
    ])
}

project.tasks['pitest'].group = "Verification"

project.tasks['sonarqube'].dependsOn jacocoTestReport

sonarqube {
    properties {
        property "sonar.projectName", "Reform :: lau-idam-backend"
        property "sonar.projectKey", "uk.gov.hmcts.reform:lau-idam-backend"
        property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
        property "sonar.pitest.mode", "reuseReport"
        property "sonar.pitest.reportsDirectory", "build/reports/pitest"
        property "sonar.sources", "src/main/java"
        property "sonar.tests", "src/test/java,src/smokeTest/java,src/functionalTest/java,src/integrationTest/java"
    }
}

// before committing a change, make sure task still works
dependencyUpdates {
    def isNonStable = { String version ->
        def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
        def regex = /^[0-9,.v-]+$/
        return !stableKeyword && !(version ==~ regex)
    }
    rejectVersionIf { selection -> // <---- notice how the closure argument is named
        return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
    }
}

// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
    // Specifies if the build should be failed if a CVSS score above a specified level is identified.
    // range of 0-10 fails the build, anything greater and it doesn't fail the build
    failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
    suppressionFile = 'config/owasp/suppressions.xml'

    analyzers {
        // Disable scanning of .NET related binaries
        assemblyEnabled = false
    }
}

dependencyManagement {
  dependencies {
    dependencySet(group: 'ch.qos.logback', version: libs.versions.logback.get()) {
      entry 'logback-core'
      entry 'logback-classic'
    }
  }
  imports {
    mavenBom "org.springframework.cloud:spring-cloud-dependencies:${libs.versions.spring.cloud.dependencies.get()}"
  }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
      url = 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
    }
}

configurations.all {
    resolutionStrategy {
        eachDependency { DependencyResolveDetails details ->
            if (details.requested.group in ['org.apache.logging.log4j']) {
                details.useVersion libs.versions.log4j.get()
            }
            if (details.requested.name == 'commons-lang3') {
                details.useVersion libs.versions.commons.lang3.get()
            }
        }
    }
}

ext['tomcat.version'] = libs.versions.tomcat.get()

dependencies {
    modules {
        module("com.google.collections:google-collections") {
            replacedBy("com.google.guava:guava", "google-collections is part of guava")
        }
    }

    implementation libs.commons.io
    implementation libs.spring.boot.starter.webmvc
    implementation libs.spring.boot.starter.actuator
    implementation libs.spring.boot.starter.jackson
    implementation libs.spring.boot.starter.data.jpa
    implementation libs.spring.boot.starter.flyway
    implementation libs.spring.boot.starter.jdbc
    implementation libs.spring.boot.starter.security
    implementation libs.spring.boot.starter.validation
    implementation libs.spring.cloud.starter.bootstrap
    implementation libs.spring.cloud.starter.openfeign
    implementation libs.springdoc.openapi.starter.webmvc.ui
    implementation libs.applicationinsights.core
    implementation libs.applicationinsights.web
    implementation libs.flyway.core
    implementation libs.flyway.database.postgresql
    implementation libs.postgresql
    implementation libs.log4j.api
    implementation libs.log4j.to.slf4j
    implementation libs.lombok
    implementation libs.spring.boot.devtools
    implementation libs.spring.boot.starter.oauth2.resource.server
    implementation libs.commons.fileupload
    implementation libs.snakeyaml
    implementation libs.commons.net
    implementation libs.hmcts.service.auth.provider.java.client
    implementation libs.hmcts.idam.java.client
    implementation libs.reform.java.logging
    implementation libs.jakarta.servlet.api
    implementation libs.httpcomponents.fluent.hc
    implementation libs.jaxb.runtime

    testImplementation libs.commons.beanutils
    testImplementation libs.spring.boot.starter.test
    testImplementation libs.spring.boot.test.starter.data.jpa
    testImplementation libs.spring.boot.test.starter.flyway
    testImplementation libs.spring.boot.test.starter.security
    testImplementation libs.spring.boot.test.starter.webmvc
    testImplementation libs.serenity.core
    testImplementation libs.serenity.junit5
    testImplementation libs.serenity.rest.assured
    testImplementation libs.cucumber.spring
    testImplementation libs.cucumber.junit
    testImplementation libs.cucumber.java
    testImplementation libs.wiremock.standalone
    testImplementation libs.sonar.pitest.plugin
    testImplementation libs.testcontainers.core
    testImplementation libs.testcontainers.postgresql
    testImplementation variantOf(libs.fortify.client) { classifier('all') }
    testImplementation libs.jakarta.el.api

    annotationProcessor libs.lombok

    testCompile libs.gradle.pitest.plugin
    testCompile libs.testcontainers.core
    testCompile libs.testcontainers.postgresql

    integrationTestCompile libs.testcontainers.core
    integrationTestCompile libs.testcontainers.postgresql

    integrationTestImplementation libs.testcontainers.core
    integrationTestImplementation libs.testcontainers.postgresql
    integrationTestImplementation libs.lombok
    integrationTestAnnotationProcessor libs.lombok

    integrationTestImplementation sourceSets.main.runtimeClasspath
    integrationTestImplementation sourceSets.test.runtimeClasspath

    functionalTestImplementation sourceSets.main.runtimeClasspath
    functionalTestImplementation sourceSets.test.runtimeClasspath

    smokeTestImplementation sourceSets.main.runtimeClasspath
    smokeTestImplementation sourceSets.test.runtimeClasspath

    functionalTestImplementation libs.lombok
    functionalTestAnnotationProcessor libs.lombok

    smokeTestImplementation libs.rest.assured.core
    smokeTestImplementation libs.rest.assured.common
    smokeTestImplementation libs.rest.assured.json.path
    smokeTestImplementation libs.rest.assured.xml.path

//Added for FN tests
    testImplementation libs.rest.assured.core
    testImplementation libs.rest.assured.json.path
    testImplementation libs.rest.assured.xml.path
    testImplementation libs.gson
    testImplementation libs.junit.toolbox
    testImplementation libs.testng

    cucumberRuntime libs.cucumber.java
    cucumberRuntime libs.spring.web
    cucumberRuntime libs.spring.security.test
    cucumberRuntime libs.rest.assured.core
    cucumberRuntime libs.rest.assured.json.path
    cucumberRuntime libs.rest.assured.xml.path
    cucumberRuntime libs.serenity.rest.assured
    cucumberRuntime libs.gson
    cucumberRuntime libs.junit.toolbox
    cucumberRuntime libs.testng

    testCompileOnly libs.lombok
    testAnnotationProcessor libs.lombok

    //pact contract testing
    contractTestImplementation libs.pact.consumer.core
    contractTestImplementation libs.pact.consumer.junit5

    contractTestImplementation sourceSets.main.runtimeClasspath
    contractTestImplementation sourceSets.test.runtimeClasspath

}

flyway {
    url = System.getenv('FLYWAY_URL')
    user = System.getenv('FLYWAY_USER')
    password = System.getenv('FLYWAY_PASSWORD')

    if (System.getenv("LAU_IDAM_DB_PASSWORD")) {
        placeholders = [
                'LAU_IDAM_DB_PASSWORD': System.getenv("LAU_IDAM_DB_PASSWORD")
        ]
    }

    baselineOnMigrate = true
    baselineVersion = '000'
}

import org.flywaydb.gradle.task.FlywayMigrateTask
task migratePostgresDatabase(type: FlywayMigrateTask) {
    baselineOnMigrate = true
    if (project.hasProperty("dburl")) {
        url = "jdbc:postgresql://${dburl}"
    }
}

application {
  mainClass = 'uk.gov.hmcts.reform.laubackend.idam.Application'
}


bootJar {
    getArchiveFileName().set(provider {
        'lau-idam-backend.jar'
    })

    manifest {
        attributes('Implementation-Version': project.version.toString())
    }
}

// Gradle 7.x issue, workaround from: https://github.com/gradle/gradle/issues/17236#issuecomment-894768083
rootProject.tasks.named("processSmokeTestResources") {
    duplicatesStrategy = 'include'
}

rootProject.tasks.named("processIntegrationTestResources") {
    duplicatesStrategy = 'include'
}

rootProject.tasks.named("processFunctionalTestResources") {
    duplicatesStrategy = 'include'
}

rootProject.tasks.named("processContractTestResources") {
    duplicatesStrategy = 'include'
}

rootProject.tasks.named("processTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processResources") {
  dependsOn("generateGitProperties")
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
}
